# surfaced

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  example_prompts.json  prompts.csv  prompts_import.json  pyproject.toml
clickhouse/materialized_views/: 001_brand_mention_daily.sql
clickhouse/queries/: alignment_judge_failures.sql  alignment_rate.sql  consistency.sql  mention_frequency.sql  provider_comparison.sql  recommendation_judge_failures.sql  recommendation_rate.sql  share_of_voice.sql  summary.sql
clickhouse/seed/: sample_data.sql
clickhouse/tables/: 001_brands.sql  002_providers.sql  003_prompts.sql  004_campaigns.sql  004_runs.sql  005_answers.sql  005_prompt_runs.sql  006_recommendation_judgments.sql  007_canonical_positions.sql  008_alignment_judgments.sql
scripts/: install.sh  run-campaign.sh  surfaced-runner.sh
src/surfaced/: __init__.py
src/surfaced/cli/: analytics.py  bootstrap.py  brands.py  campaigns.py  formatting.py  init.py  main.py  positions.py  prompts.py  providers.py  purge.py  run.py  runs.py  setup.py
src/surfaced/db/: client.py  queries.py
tests/: conftest.py  test_analyzer.py  test_bootstrap.py  test_cli_analytics.py  test_cli_brands.py  test_cli_init.py  test_cli_prompts.py  test_cli_providers.py  test_cli_run.py  test_cli_runs.py  test_cli_tables.py  test_engine_runner.py  test_integration_analytics.py  test_integration_crud.py  test_models.py  test_prompts_cli.py  test_providers_registry.py  test_queries.py  test_query_service.py  test_rate_limiter.py  test_runner.py  test_setup.py  test_sql_assets.py
(+22 files in other folders)
